# OpenCode

./: .env.example  .gitignore  .ignore  AGENTS.md  README.md  WHISTLE_STATS_README.md  filter-gemma.py  opencode.json  pyproject.toml  requirements.txt  whistle_stats.sh  whistle_traffic_analyzer.py
.ai/: AGENTS.md  ai.ignore
.opencode/agents/: explorer.md  reviewer.md  writer.md
.opencode/commands/: analyze.md  lint.md  run.md  test.md
docs/: architecture.md  contributing.md  vscode-mcp-setup.md
